--- a/mysql/.env
+++ b/mysql/.env
@@ -1,4 +1,4 @@
 MYSQL_ROOT_PASSWORD=mysql
-MYSQL_DATABASE=main
-MYSQL_USER=admin_user
+MYSQL_DATABASE=test_main
+MYSQL_USER=test_user
 MYSQL_PASSWORD=password
